# PipeLine_2

./: Dockerfile  README.md  TODO.md  docker-compose.yml  pipelines.db  pyproject.toml
.github/workflows/: Action.yml
example_pipeline/: pipeline.py
pipelines/: cli.py  core.py  database.py  load.py  tasks.py  utils.py
