[tool.poetry]
name = "pipelines"
version = "0.1.0"
description = ""
authors = ["Ilya <Esin54321@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
pathlib = "^1.0.1"
python-dotenv = "^1.0.0"
urllib3 = "^1.26.15"


[tool.poetry.scripts]
pipelines = 'pipelines.cli:cli'

[tool.poetry.group.dev.dependencies]
pandas = "^1.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
